# projecteuler

./: Cargo.toml  flake.nix
examples/: problem_10.rs  problem_13.rs  problem_14.rs  problem_15.rs  problem_16.rs  problem_3.rs  problem_4.rs  problem_5.rs  problem_6.rs  problem_7.rs
problem_1/src/: main.rs
problem_10/: Cargo.toml
problem_11/: Cargo.toml
problem_11/src/: main.rs
problem_12/: Cargo.toml
problem_12/src/: main.rs
problem_13/: Cargo.toml
problem_13/src/: main.rs
problem_14/: Cargo.toml
problem_14/src/: main.rs
problem_15/: Cargo.toml
problem_16/: Cargo.toml
problem_17/: Cargo.toml
problem_17/src/: main.rs
problem_18/: Cargo.toml
problem_18/src/: main.rs
problem_19/: Cargo.toml  time.nu  time.py
problem_2/: Cargo.toml
problem_2/src/: main.rs
problem_3/: Cargo.toml
problem_3/src/: main.rs
problem_4/: Cargo.toml
problem_5/: Cargo.toml
problem_6/: Cargo.toml
problem_67/: Cargo.toml
problem_7/: Cargo.toml
problem_7/src/: main.rs
problem_8/: Cargo.toml
problem_8/src/: main.rs
problem_9/: Cargo.toml
problem_9/src/: main.rs
src/: lib.rs
